--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "website",
   "version": "1.0.0",
   "private": true,
-  "homepage": "http://innazh.github.io/resumeWebsite/",
+  "homepage": "https://innazh.github.io/resumeWebsite/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
