--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "website",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
-  "homepage": "https://innazh.github.io/resumeWebsite/",
+  "homepage": "https://innazh.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
