--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "website",
   "version": "1.1.0",
   "private": true,
-  "homepage": "https://innazh.github.io",
+  "homepage": "https://innazh.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
